# Game

./: .gitignore  Cargo.toml  Session.vim
src/: events.rs  fail_safe.rs  main.rs  registries.rs  registry.rs  runtimes.rs  states.rs  wgpu_async.rs  window.rs
src/local_resource/: mod.rs
src/logging/: loglevel.rs  mod.rs
src/registries/: mod.rs  textures.rs  util.rs
src/rendering/: buffer.rs  data_loader.rs  framebuffer_blitter.rs  gpu_lookup.rs  mod.rs  util.rs
src/rendering/pipeline/: macros.rs  mod.rs
src/resources/: .gitignore  mod.rs  shaders.rs  textures.rs
src/resources/early/: frame_blitter.wgsl  loading_screen.wgsl
src/resources/ui/: colored_rectangle_shader.wgsl
src/screen/: loading_screen.rs  mod.rs  screen_stack.rs
src/screen/loading_screen/: loading_paw_model.rs  mod.rs  resources.rs
src/ui/: component.rs  mod.rs  primitives.rs
src/ui/component/: button.rs  column.rs  fn_builder.rs  mod.rs  rectangle.rs  row.rs
src/ui/primitives/model/: colored_rectangle.rs  mod.rs
src/util/: error.rs  idented_writer.rs  identifier.rs  mod.rs  sig_safe.rs
