[package]
name = "foxie_fox_game"
version = "0.1.0"
edition = "2024"

[dependencies]
bytemuck = "1.25.0"
chrono = "0.4.44"
closure = "0.3.0"
futures = "0.3.32"
image = { version = "0.25.10", default-features = false, features = ["color_quant", "png", "rayon", "webp"] }
itoa = "1.0.18"
libc = "0.2.186"
log = "0.4.29"
raw-window-handle = "0.6.2"
rayon = "1.12.0"
sdl3 = { version = "0.17.3", features = ["raw-window-handle"] }
signal-hook = "0.4.4"
taffy = "0.10.1"
thiserror = "2.0.18"
thread_local = "1.1.9"
tokio = { version = "1.52.3", features = ["rt", "rt-multi-thread", "fs", "signal", "time", "macros"] }
tokio-macros = "2.7.0"
tokio-scoped = "0.2.0"
wgpu = { version = "29.0.3", features = ["glsl", "std", "vulkan"], default-features = false }

